update SwSh set tiers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Battle Facilities Calculator
     </div>
 	<hr />
 	<p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
-	<p>Mass Calculator "Honkalculator" by Honko, ported by SilverstarStream</p>
+	<p>Mass Calculator "Honkalculator" by <a href="https://www.smogon.com/forums/members/honko.42413/">Honko</a></p>
 	<hr /><!--This Horizonal Rule is experimental, it can be removed-->
 
 	<!-- <div class="banner"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
@@ -87,7 +87,6 @@ title: Battle Facilities Calculator
 						<th class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g7 g8 g20 g21 g22">IVs</th>
 						<th class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g7 g8 g20 g21">EVs</th>
 						<th class="gen-specific g1 g2 hide">DVs</th>
-						<th class="gen-specific g22 hide">AVs</th>
 						<th></th>
 						<th></th>
 					</tr>
@@ -96,7 +95,6 @@ title: Battle Facilities Calculator
 						<td><input class="base calc-trigger" value="100" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g22"><input class="ivs calc-trigger" value="31" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
-						<td class="gen-specific g22 hide"><input class="avs calc-trigger" type="number" min="0" max="200" step="1" value="0" /></td>
 						<td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" disabled="disabled" /></td>
 						<td><span class="total">341</span></td>
 						<td></td>
@@ -106,7 +104,6 @@ title: Battle Facilities Calculator
 						<td><input class="base calc-trigger" value="100" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g22"><input class="ivs calc-trigger" value="31" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
-						<td class="gen-specific g22 hide"><input class="avs calc-trigger" type="number" min="0" max="200" step="1" value="0" /></td>
 						<td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
 						<td><span class="total">236</span></td>
 						<td><select class="boost calc-trigger">
@@ -130,7 +127,6 @@ title: Battle Facilities Calculator
 						<td><input class="base calc-trigger" value="100" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g22"><input class="ivs calc-trigger" value="31" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
-						<td class="gen-specific g22 hide"><input class="avs calc-trigger" type="number" min="0" max="200" step="1" value="0" /></td>
 						<td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
 						<td><span class="total">236</span></td>
 						<td><select class="boost calc-trigger">
@@ -154,7 +150,6 @@ title: Battle Facilities Calculator
 						<td><input class="base calc-trigger" value="100" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g22"><input class="ivs calc-trigger" value="31" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
-						<td class="gen-specific g22 hide"><input class="avs calc-trigger" type="number" min="0" max="200" step="1" value="0" /></td>
 						<td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
 						<td><span class="total">236</span></td>
 						<td><select class="boost calc-trigger">
@@ -178,7 +173,6 @@ title: Battle Facilities Calculator
 						<td><input class="base calc-trigger" value="100" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g22"><input class="ivs calc-trigger" value="31" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
-						<td class="gen-specific g22 hide"><input class="avs calc-trigger" type="number" min="0" max="200" step="1" value="0" /></td>
 						<td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" disabled="disabled" /></td>
 						<td><span class="total">236</span></td>
 						<td><select class="boost calc-trigger">
@@ -223,7 +217,6 @@ title: Battle Facilities Calculator
 						<td><input class="base calc-trigger" value="100" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21 g22"><input class="ivs calc-trigger" value="31" /></td>
 						<td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g20 g21"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
-						<td class="gen-specific g22 hide"><input class="avs calc-trigger" type="number" min="0" max="200" step="1" value="0" /></td>
 						<td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
 						<td><span class="total">236</span></td>
 						<td><select class="boost calc-trigger">
@@ -378,10 +371,6 @@ title: Battle Facilities Calculator
 				</div>
 			</div>
 			<div class="info-group">
-				<label class="gen-specific g22 hide">Happiness</label>
-				<input class="gen-specific g22 hide current-happiness hapL calc-trigger" value="70" />
-				<button class="gen-specific g22 hide minHapL calc-trigger btn" id="minHapL" style="padding:0px; width: 3em; margin-left: 0.1em;" onclick="$('.hapL').val(0); $('.hapL').change()" />Min</button>
-				<button class="gen-specific g22 hide maxHapL calc-trigger btn" id="maxHapL" style="padding:0px; width: 3em; margin-left: 0.1em;" onclick="$('.hapL').val(255); $('.hapL').change()" />Max</button>
 				<br />
 				<label>Current HP</label>
 				<input class="current-hp calc-trigger" value="341" />/<span class="max-hp">341</span> (<input class="percent-hp calc-trigger" value="100" />%)
@@ -1031,10 +1020,6 @@ title: Battle Facilities Calculator
 					</div>
 				</div>
 				<div class="info-group">
-					<label class="gen-specific g22 hide">Happiness</label>
-					<input class="gen-specific g22 hide current-happiness hapR calc-trigger" value="70" />
-					<button class="gen-specific g22 hide minHapR calc-trigger btn" id="minHapR" style="padding:0px; width: 3em; margin-left: 0.1em;" onclick="$('.hapR').val(0); $('.hapR').change()" />Min</button>
-					<button class="gen-specific g22 hide maxHapR calc-trigger btn" id="maxHapR" style="padding:0px; width: 3em; margin-left: 0.1em;" onclick="$('.hapR').val(255); $('.hapR').change()" />Max</button>
 					<br />
 					<label>Current HP</label>
 					<input class="current-hp calc-trigger" value="341" />/<span class="max-hp">341</span> (<input class="percent-hp calc-trigger" value="100" />%)&nbsp;&nbsp;
