--- a/honkalculate.html
+++ b/honkalculate.html
@@ -21,7 +21,7 @@ title: Battle Facilities Mass Calculator
     </div>
     <hr />
     <p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
-    <p>Mass Calculator "Honkalculator" by <a href="https://www.smogon.com/forums/members/honko.42413/">Honko</a>, ported by SilverstarStream</p>
+    <p>Mass Calculator "Honkalculator" by <a href="https://www.smogon.com/forums/members/honko.42413/">Honko</a></p>
     <hr />
     <div>
         <span class="title-text">Sets: </span>
