update ORAS set tiers

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -30,8 +30,10 @@ title: Battle Facilities Mass Calculator
         <span class="tiers" title="Select the sets." id="tiers">
             <input class="btn-input" type="radio" name="tier" id="All"><label class="btn btn-left gen-specific g5 g6 g7 g80" for="All">All sets</label><!--not in gen 8-->
             <input class="btn-input" type="radio" name="tier" id="40"><label class="btn btn-mid gen-specific g6 g7" for="40">40+</label>
-            <input class="btn-input" type="radio" name="tier" id="Tower"><label class="btn btn-left gen-specific g8" for="Tower">Tower</label>
+            <input class="btn-input" type="radio" name="tier" id="Tower"><label class="btn btn-mid gen-specific g8" for="Tower">Tower</label>
             <input class="btn-input" type="radio" name="tier" id="RS"><label class="btn btn-mid gen-specific g8" for="RS">RS</label>
+            <input class="btn-input" type="radio" name="tier" id="SM"><label class="btn btn-mid btn-fit gen-specific g80" for="SM">Master Singles</label>
+            <input class="btn-input" type="radio" name="tier" id="DM"><label class="btn btn-right btn-fit gen-specific g80" for="DM">Master Doubles</label>
             <!--adjustTierBorderRadius() in honkalculate_controls is used to round or square these buttons per gen-->
         </span>
     </div>
