--- a/honkalculate.html
+++ b/honkalculate.html
@@ -38,7 +38,7 @@ title: Battle Facilities Mass Calculator
         </span>
     </div>
 </div>
-<div class="flex-container" style="display: flex;">
+<div class="flex-container" style="display: flex;justify-content: center;">
     <div class="panel-group"><!--Container for left panels-->
         <div class="panel poke-info" id="p1"><!--Start Pokemon panel-->
             <div class="panel-heading">
