--- a/honkalculate.html
+++ b/honkalculate.html
@@ -716,7 +716,7 @@ title: Battle Facilities Mass Calculator
     </div><!--End Damage Results panel-->
 </div>
 <!--The css for the dataTable used in Damage Results-->
-<link type="text/css" rel="stylesheet" href="https://cdn.datatables.net/1.10.4/css/jquery.dataTables.min.css">
+<link type="text/css" rel="stylesheet" src="../_css/datatables.css">
 <link type="text/css" rel="stylesheet" href="https://cdn.datatables.net/colvis/1.1.1/css/dataTables.colVis.css">
 <!-- jquery.dataTables is incompatible with newer versions of jQuery -->
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> <!-- to be replaced (probably) -->
