fix mass calc filtering; update for gen5

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -29,6 +29,7 @@ title: Battle Facilities Mass Calculator
         <!--default checked tier is handled by honkalculate_controls's gen change function-->
         <span class="tiers" title="Select the sets." id="tiers">
             <input class="btn-input" type="radio" name="tier" id="All"><label class="btn btn-left gen-specific g5 g6 g7 g80" for="All">All sets</label><!--not in gen 8-->
+            <input class="btn-input" type="radio" name="tier" id="28"><label class="btn btn-mid gen-specific g5" for="28">28+</label>
             <input class="btn-input" type="radio" name="tier" id="40"><label class="btn btn-mid gen-specific g6 g7" for="40">40+</label>
             <input class="btn-input" type="radio" name="tier" id="Tower"><label class="btn btn-mid gen-specific g8" for="Tower">Tower</label>
             <input class="btn-input" type="radio" name="tier" id="RS"><label class="btn btn-mid gen-specific g8" for="RS">RS</label>
