--- a/honkalculate.html
+++ b/honkalculate.html
@@ -717,8 +717,8 @@ title: Battle Facilities Mass Calculator
     </div><!--End Damage Results panel-->
 </div>
 <!--The css for the dataTable used in Damage Results-->
-<link type="text/css" rel="stylesheet" src="../_css/datatables.css">
-<link type="text/css" rel="stylesheet" src="../_css/colvis.css">
+<link type="text/css" rel="stylesheet" href="../_css/datatables.css">
+<link type="text/css" rel="stylesheet" href="../_css/colvis.css">
 <!-- jquery.dataTables is incompatible with newer versions of jQuery -->
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> <!-- to be replaced (probably) -->
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
