--- a/honkalculate.html
+++ b/honkalculate.html
@@ -694,7 +694,7 @@ title: Battle Facilities Mass Calculator
         </div><!--End Field panel-->
     </div><!--End container for left panels-->
     <div><!--Start Damage Results panel-->
-        <fieldset class="panel holder-0">
+        <fieldset class="panel holder-0" style="min-width:845px">
             <div class="panel-heading">
                 <h4 class="panel-title">Damage Results</h4>
             </div>
