--- a/honkalculate.html
+++ b/honkalculate.html
@@ -20,9 +20,7 @@ title: Battle Facilities Mass Calculator
         </span>
     </div>
     <hr />
-    <p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a></p>
-    <p>Mass Calculator based on <a href="https://www.smogon.com/forums/members/honko.42413/">Honko</a>'s "Honkalculator"</p>
-    <hr />
+    <p>Based on the BSS calculator by <a href="https://twitter.com/jakecantsay">@jakecantsay</a> &amp; <a href="https://www.smogon.com/forums/members/188833/">Lego</a> | Mass Calculator based on <a href="https://www.smogon.com/forums/members/honko.42413/">Honko</a>'s "Honkalculator"</p>
     <div>
         <span class="title-text">Sets: </span>
         <!--"tier" isn't an ideal name, but it's descriptive enough, so I'm not against it-->
