--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ title: Battle Facilities Calculator
 						<option value="9">9</option>
 						<option value="10" selected="selected">10</option>
 					</select>
-					<input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-aligne: middle"></label>
+					<input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
 				</div>
 			</div>
 			<div class="move1">
@@ -1035,7 +1035,7 @@ title: Battle Facilities Calculator
 							<option value="9">9</option>
 							<option value="10" selected="selected">10</option>
 						</select>
-						<input class="max calc-trigger btn-input" type="checkbox" id="maxR" /><label class="btn btn-wide gen-specific g8" for="maxR" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-aligne: middle"></label>
+						<input class="max calc-trigger btn-input" type="checkbox" id="maxR" /><label class="btn btn-wide gen-specific g8" for="maxR" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
 					</div>
 				</div>
 				<div class="move1">
