--- a/honkalculate.html
+++ b/honkalculate.html
@@ -403,7 +403,7 @@ title: Battle Facilities Mass Calculator
                             <option value="9">9</option>
                             <option value="10" selected="selected">10</option>
                         </select>
-                        <input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
+                        <input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" style="width: 6.3em" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
                     </div>
                 </div>
                 <div class="move1">
