revert z-move button size

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ title: Battle Facilities Calculator
 					<option value="Special">Special</option>
 				</select>
 				<input class="move-crit calc-trigger btn-input" type="checkbox" id="critL1" /><label class="btn crit-btn" for="critL1" title="Force this attack to be a critical hit?">Crit</label>
-				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL1" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL1" title="Use the corresponding Z-Move?">Z-Move</label>
+				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL1" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL1" title="Use the corresponding Z-Move?">Z-Move</label>
 				<input class="move-max calc-trigger btn-input" type="checkbox" id="maxL1" /><label class="btn x-btn gen-specific g8" for="maxL1" title="Use the corresponding Max Move?">Max</label>
 				<select class="move-hits calc-trigger hide">
 					<option value="2">2 hits</option>
@@ -416,7 +416,7 @@ title: Battle Facilities Calculator
 					<option value="Special">Special</option>
 				</select>
 				<input class="move-crit calc-trigger btn-input" type="checkbox" id="critL2" /><label class="btn crit-btn" for="critL2" title="Force this attack to be a critical hit?">Crit</label>
-				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL2" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL2" title="Use the corresponding Z-Move?">Z-Move</label>
+				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL2" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL2" title="Use the corresponding Z-Move?">Z-Move</label>
 				<input class="move-max calc-trigger btn-input" type="checkbox" id="maxL2" /><label class="btn x-btn gen-specific g8" for="maxL2" title="Use the corresponding Max Move?">Max</label>
 				<select class="move-hits calc-trigger hide">
 					<option value="2">2 hits</option>
@@ -434,7 +434,7 @@ title: Battle Facilities Calculator
 					<option value="Special">Special</option>
 				</select>
 				<input class="move-crit calc-trigger btn-input" type="checkbox" id="critL3" /><label class="btn crit-btn" for="critL3" title="Force this attack to be a critical hit?">Crit</label>
-				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL3" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL3" title="Use the corresponding Z-Move?">Z-Move</label>
+				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL3" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL3" title="Use the corresponding Z-Move?">Z-Move</label>
 				<input class="move-max calc-trigger btn-input" type="checkbox" id="maxL3" /><label class="btn x-btn gen-specific g8" for="maxL3" title="Use the corresponding Max Move?">Max</label>
 				<select class="move-hits calc-trigger hide">
 					<option value="2">2 hits</option>
@@ -452,7 +452,7 @@ title: Battle Facilities Calculator
 					<option value="Special">Special</option>
 				</select>
 				<input class="move-crit calc-trigger btn-input" type="checkbox" id="critL4" /><label class="btn crit-btn" for="critL4" title="Force this attack to be a critical hit?">Crit</label>
-				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL4" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL4" title="Use the corresponding Z-Move?">Z-Move</label>
+				<input class="move-z calc-trigger btn-input" type="checkbox" id="zL4" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL4" title="Use the corresponding Z-Move?">Z-Move</label>
 				<input class="move-max calc-trigger btn-input" type="checkbox" id="maxL4" /><label class="btn x-btn gen-specific g8" for="maxL4" title="Use the corresponding Max Move?">Max</label>
 				<select class="move-hits calc-trigger hide">
 					<option value="2">2 hits</option>
@@ -1047,7 +1047,7 @@ title: Battle Facilities Calculator
 						<option value="Special">Special</option>
 					</select>
 					<input class="move-crit calc-trigger btn-input" type="checkbox" id="critR1" /><label class="btn crit-btn" for="critR1" title="Force this attack to be a critical hit?">Crit</label>
-					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR1" /><label class="btn x-btn gen-specific g7 g20 g21" for="zR1" title="Use the corresponding Z-Move?">Z-Move</label>
+					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR1" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zR1" title="Use the corresponding Z-Move?">Z-Move</label>
 					<input class="move-max calc-trigger btn-input" type="checkbox" id="maxR1" /><label class="btn x-btn gen-specific g8" for="maxR1" title="Use the corresponding Max Move?">Max</label>
 					<select class="move-hits calc-trigger hide">
 						<option value="2">2 hits</option>
@@ -1065,7 +1065,7 @@ title: Battle Facilities Calculator
 						<option value="Special">Special</option>
 					</select>
 					<input class="move-crit calc-trigger btn-input" type="checkbox" id="critR2" /><label class="btn crit-btn" for="critR2" title="Force this attack to be a critical hit?">Crit</label>
-					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR2" /><label class="btn x-btn gen-specific g7 g20 g21" for="zR2" title="Use the corresponding Z-Move?">Z-Move</label>
+					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR2" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zR2" title="Use the corresponding Z-Move?">Z-Move</label>
 					<input class="move-max calc-trigger btn-input" type="checkbox" id="maxR2" /><label class="btn x-btn gen-specific g8" for="maxR2" title="Use the corresponding Max Move?">Max</label>
 					<select class="move-hits calc-trigger hide">
 						<option value="2">2 hits</option>
@@ -1083,7 +1083,7 @@ title: Battle Facilities Calculator
 						<option value="Special">Special</option>
 					</select>
 					<input class="move-crit calc-trigger btn-input" type="checkbox" id="critR3" /><label class="btn crit-btn" for="critR3" title="Force this attack to be a critical hit?">Crit</label>
-					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR3" /><label class="btn x-btn gen-specific g7 g20 g21" for="zR3" title="Use the corresponding Z-Move?">Z-Move</label>
+					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR3" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zR3" title="Use the corresponding Z-Move?">Z-Move</label>
 					<input class="move-max calc-trigger btn-input" type="checkbox" id="maxR3" /><label class="btn x-btn gen-specific g8" for="maxR3" title="Use the corresponding Max Move?">Max</label>
 					<select class="move-hits calc-trigger hide">
 						<option value="2">2 hits</option>
@@ -1101,7 +1101,7 @@ title: Battle Facilities Calculator
 						<option value="Special">Special</option>
 					</select>
 					<input class="move-crit calc-trigger btn-input" type="checkbox" id="critR4" /><label class="btn crit-btn" for="critR4" title="Force this attack to be a critical hit?">Crit</label>
-					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR4" /><label class="btn x-btn gen-specific g7 g20 g21" for="zR4" title="Use the corresponding Z-Move?">Z-Move</label>
+					<input class="move-z calc-trigger btn-input" type="checkbox" id="zR4" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zR4" title="Use the corresponding Z-Move?">Z-Move</label>
 					<input class="move-max calc-trigger btn-input" type="checkbox" id="maxR4" /><label class="btn x-btn gen-specific g8" for="maxR4" title="Use the corresponding Max Move?">Max</label>
 					<select class="move-hits calc-trigger hide">
 						<option value="2">2 hits</option>
