--- a/honkalculate.html
+++ b/honkalculate.html
@@ -415,7 +415,7 @@ title: Battle Facilities Mass Calculator
                         <option value="Special">Special</option>
                     </select>
                     <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL1" /><label class="btn crit-btn" for="critL1" title="Force this attack to be a critical hit?">Crit</label>
-                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL1" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL1" title="Use the corresponding Z-Move?">Z-Move</label>
+                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL1" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL1" title="Use the corresponding Z-Move?">Z-Move</label>
                     <input class="move-max calc-trigger btn-input" type="checkbox" id="maxL1" /><label class="btn x-btn gen-specific g8" for="maxL1" title="Use the corresponding Max Move?">Max</label>
                     <select class="move-hits calc-trigger hide">
                         <option value="2">2 hits</option>
@@ -433,7 +433,7 @@ title: Battle Facilities Mass Calculator
                         <option value="Special">Special</option>
                     </select>
                     <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL2" /><label class="btn crit-btn" for="critL2" title="Force this attack to be a critical hit?">Crit</label>
-                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL2" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL2" title="Use the corresponding Z-Move?">Z-Move</label>
+                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL2" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL2" title="Use the corresponding Z-Move?">Z-Move</label>
                     <input class="move-max calc-trigger btn-input" type="checkbox" id="maxL2" /><label class="btn x-btn gen-specific g8" for="maxL2" title="Use the corresponding Max Move?">Max</label>
                     <select class="move-hits calc-trigger hide">
                         <option value="2">2 hits</option>
@@ -451,7 +451,7 @@ title: Battle Facilities Mass Calculator
                         <option value="Special">Special</option>
                     </select>
                     <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL3" /><label class="btn crit-btn" for="critL3" title="Force this attack to be a critical hit?">Crit</label>
-                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL3" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL3" title="Use the corresponding Z-Move?">Z-Move</label>
+                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL3" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL3" title="Use the corresponding Z-Move?">Z-Move</label>
                     <input class="move-max calc-trigger btn-input" type="checkbox" id="maxL3" /><label class="btn x-btn gen-specific g8" for="maxL3" title="Use the corresponding Max Move?">Max</label>
                     <select class="move-hits calc-trigger hide">
                         <option value="2">2 hits</option>
@@ -469,7 +469,7 @@ title: Battle Facilities Mass Calculator
                         <option value="Special">Special</option>
                     </select>
                     <input class="move-crit calc-trigger btn-input" type="checkbox" id="critL4" /><label class="btn crit-btn" for="critL4" title="Force this attack to be a critical hit?">Crit</label>
-                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL4" /><label class="btn x-btn gen-specific g7 g20 g21" for="zL4" title="Use the corresponding Z-Move?">Z-Move</label>
+                    <input class="move-z calc-trigger btn-input" type="checkbox" id="zL4" /><label class="btn x-btn z-btn gen-specific g7 g20 g21" for="zL4" title="Use the corresponding Z-Move?">Z-Move</label>
                     <input class="move-max calc-trigger btn-input" type="checkbox" id="maxL4" /><label class="btn x-btn gen-specific g8" for="maxL4" title="Use the corresponding Max Move?">Max</label>
                     <select class="move-hits calc-trigger hide">
                         <option value="2">2 hits</option>
