--- a/honkalculate.html
+++ b/honkalculate.html
@@ -629,7 +629,7 @@ title: Battle Facilities Mass Calculator
                         <input class="btn-input calc-trigger" type="checkbox" id="minimR" /><label class="btn btn-xwide" for="minimR">Minimize</label>
                     </div>
                 </div>
-                <div class="btn-group gen-specific g6 g7 g8 g9">
+                <div class="btn-group gen-specific g6 g7 g8">
                     <div class="left" title="Is this Pokemon affected by Victory Star?">
                         <input class="btn-input calc-trigger" type="checkbox" id="vicStarL" /><label class="btn btn-xwide" for="vicStarL">Victory Star</label>
                     </div>
@@ -653,7 +653,7 @@ title: Battle Facilities Mass Calculator
                         <input class="btn-input calc-trigger" type="checkbox" id="friendGuardR" /><label class="btn btn-xxwide" for="friendGuardR">Friend Guard</label>
                     </div>
                 </div>
-                <div class="btn-group gen-specific g7 g8 g9">
+                <div class="btn-group gen-specific g7 g8">
                     <div class="left" title="Has this Pokemon's power been boosted by an ally's Battery?">
                         <input class="btn-input calc-trigger" type="checkbox" id="batteryL" /><label class="btn btn-xxwide" for="batteryL">Battery</label>
                     </div>
