--- a/honkalculate.html
+++ b/honkalculate.html
@@ -42,7 +42,7 @@ title: Battle Facilities Mass Calculator
     <div class="panel-group"><!--Container for left panels-->
         <div class="panel poke-info" id="p1"><!--Start Pokemon panel-->
             <div class="panel-heading">
-                <h4 class="panel-title">Pokémon 1</h4>
+                <h4 class="panel-title">Pokémon</h4>
             </div>
             <div class="panel-body">
                 <input type="text" class="set-selector calc-trigger" />
@@ -92,7 +92,8 @@ title: Battle Facilities Mass Calculator
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
                             <td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
                             <td><span class="total">236</span></td>
-                            <td><select class="boost calc-trigger">
+                            <td>
+                                <select class="boost calc-trigger">
                                     <option value="6">+6</option>
                                     <option value="5">+5</option>
                                     <option value="4">+4</option>
@@ -106,7 +107,8 @@ title: Battle Facilities Mass Calculator
                                     <option value="-4">-4</option>
                                     <option value="-5">-5</option>
                                     <option value="-6">-6</option>
-                                </select></td>
+                                </select>
+                            </td>
                         </tr>
                         <tr class="df">
                             <td><label>Defense</label></td>
@@ -115,7 +117,8 @@ title: Battle Facilities Mass Calculator
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
                             <td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
                             <td><span class="total">236</span></td>
-                            <td><select class="boost calc-trigger">
+                            <td>
+                                <select class="boost calc-trigger">
                                     <option value="6">+6</option>
                                     <option value="5">+5</option>
                                     <option value="4">+4</option>
@@ -129,7 +132,8 @@ title: Battle Facilities Mass Calculator
                                     <option value="-4">-4</option>
                                     <option value="-5">-5</option>
                                     <option value="-6">-6</option>
-                                </select></td>
+                                </select>
+                            </td>
                         </tr>
                         <tr class="sa gen-specific g2 g3 g4 g5 g6 g7 g8 g80 g9">
                             <td><label>Sp. Atk</label></td>
@@ -138,7 +142,8 @@ title: Battle Facilities Mass Calculator
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
                             <td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
                             <td><span class="total">236</span></td>
-                            <td><select class="boost calc-trigger">
+                            <td>
+                                <select class="boost calc-trigger">
                                     <option value="6">+6</option>
                                     <option value="5">+5</option>
                                     <option value="4">+4</option>
@@ -152,7 +157,8 @@ title: Battle Facilities Mass Calculator
                                     <option value="-4">-4</option>
                                     <option value="-5">-5</option>
                                     <option value="-6">-6</option>
-                                </select></td>
+                                </select>
+                            </td>
                         </tr>
                         <tr class="sd gen-specific g2 g3 g4 g5 g6 g7 g8 g80 g9">
                             <td><label>Sp. Def</label></td>
@@ -161,7 +167,8 @@ title: Battle Facilities Mass Calculator
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
                             <td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" disabled="disabled" /></td>
                             <td><span class="total">236</span></td>
-                            <td><select class="boost calc-trigger">
+                            <td>
+                                <select class="boost calc-trigger">
                                     <option value="6">+6</option>
                                     <option value="5">+5</option>
                                     <option value="4">+4</option>
@@ -175,14 +182,16 @@ title: Battle Facilities Mass Calculator
                                     <option value="-4">-4</option>
                                     <option value="-5">-5</option>
                                     <option value="-6">-6</option>
-                                </select></td>
+                                </select>
+                            </td>
                         </tr>
                         <tr class="sl gen-specific g1 hide">
                             <td><label>Special</label></td>
                             <td><input class="base calc-trigger" value="100" /></td>
                             <td><input class="dvs calc-trigger" value="15" /></td>
                             <td><span class="total">236</span></td>
-                            <td><select class="boost calc-trigger">
+                            <td>
+                                <select class="boost calc-trigger">
                                     <option value="6">+6</option>
                                     <option value="5">+5</option>
                                     <option value="4">+4</option>
@@ -196,7 +205,8 @@ title: Battle Facilities Mass Calculator
                                     <option value="-4">-4</option>
                                     <option value="-5">-5</option>
                                     <option value="-6">-6</option>
-                                </select></td>
+                                </select>
+                            </td>
                         </tr>
                         <tr class="sp">
                             <td><label>Speed</label></td>
@@ -205,7 +215,8 @@ title: Battle Facilities Mass Calculator
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9"><input class="evs calc-trigger" type="number" min="0" max="252" step="4" value="0" /></td>
                             <td class="gen-specific g1 g2 hide"><input class="dvs calc-trigger" value="15" /></td>
                             <td><span class="total">236</span></td>
-                            <td><select class="boost calc-trigger">
+                            <td>
+                                <select class="boost calc-trigger">
                                     <option value="6">+6</option>
                                     <option value="5">+5</option>
                                     <option value="4">+4</option>
@@ -219,9 +230,9 @@ title: Battle Facilities Mass Calculator
                                     <option value="-4">-4</option>
                                     <option value="-5">-5</option>
                                     <option value="-6">-6</option>
-                                </select></td>
-                            <td><span class="totalMod">---</span>
-                                </td>
+                                </select>
+                            </td>
+                            <td><span class="totalMod">---</span></td>
                         </tr>
                         <tr>
                             <td></td>
@@ -237,21 +248,23 @@ title: Battle Facilities Mass Calculator
                             <th></th>
                             </th>
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9">
-                            <td><select class="boost calc-trigger">
-                                    <option value="6">+6</option>
-                                    <option value="5">+5</option>
-                                    <option value="4">+4</option>
-                                    <option value="3">+3</option>
-                                    <option value="2">+2</option>
-                                    <option value="1">+1</option>
-                                    <option value="0" selected="selected">--</option>
-                                    <option value="-1">-1</option>
-                                    <option value="-2">-2</option>
-                                    <option value="-3">-3</option>
-                                    <option value="-4">-4</option>
-                                    <option value="-5">-5</option>
-                                    <option value="-6">-6</option>
-                                </select></td>
+                                <td>
+                                    <select class="boost calc-trigger">
+                                        <option value="6">+6</option>
+                                        <option value="5">+5</option>
+                                        <option value="4">+4</option>
+                                        <option value="3">+3</option>
+                                        <option value="2">+2</option>
+                                        <option value="1">+1</option>
+                                        <option value="0" selected="selected">--</option>
+                                        <option value="-1">-1</option>
+                                        <option value="-2">-2</option>
+                                        <option value="-3">-3</option>
+                                        <option value="-4">-4</option>
+                                        <option value="-5">-5</option>
+                                        <option value="-6">-6</option>
+                                    </select>
+                                </td>
                             </td>
                         </tr>
                         <tr class="es">
@@ -261,21 +274,23 @@ title: Battle Facilities Mass Calculator
                             <th></th>
                             </th>
                             <td class="gen-specific g3 g4 g5 g6 g7 g8 g80 g9">
-                            <td><select class="boost calc-trigger">
-                                    <option value="6">+6</option>
-                                    <option value="5">+5</option>
-                                    <option value="4">+4</option>
-                                    <option value="3">+3</option>
-                                    <option value="2">+2</option>
-                                    <option value="1">+1</option>
-                                    <option value="0" selected="selected">--</option>
-                                    <option value="-1">-1</option>
-                                    <option value="-2">-2</option>
-                                    <option value="-3">-3</option>
-                                    <option value="-4">-4</option>
-                                    <option value="-5">-5</option>
-                                    <option value="-6">-6</option>
-                                </select></td>
+                                <td>
+                                    <select class="boost calc-trigger">
+                                        <option value="6">+6</option>
+                                        <option value="5">+5</option>
+                                        <option value="4">+4</option>
+                                        <option value="3">+3</option>
+                                        <option value="2">+2</option>
+                                        <option value="1">+1</option>
+                                        <option value="0" selected="selected">--</option>
+                                        <option value="-1">-1</option>
+                                        <option value="-2">-2</option>
+                                        <option value="-3">-3</option>
+                                        <option value="-4">-4</option>
+                                        <option value="-5">-5</option>
+                                        <option value="-6">-6</option>
+                                    </select>
+                                </td>
                             </td>
                         </tr>
                     </table>
@@ -371,29 +386,29 @@ title: Battle Facilities Mass Calculator
                         <input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" style="width: 6.3em" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
                     </div>
                     <div class="gen-specific g9">
-                            <label>Tera Type</label>
-                            <select class="tera-type calc-trigger">
-                                <option value="Normal" selected="selected">Normal</option>
-                                <option value="Grass">Grass</option>
-                                <option value="Fire">Fire</option>
-                                <option value="Water">Water</option>
-                                <option value="Electric">Electric</option>
-                                <option value="Ice">Ice</option>
-                                <option value="Flying">Flying</option>
-                                <option value="Bug">Bug</option>
-                                <option value="Poison">Poison</option>
-                                <option value="Ground">Ground</option>
-                                <option value="Rock">Rock</option>
-                                <option value="Fighting">Fighting</option>
-                                <option value="Psychic">Psychic</option>
-                                <option value="Ghost">Ghost</option>
-                                <option value="Dragon">Dragon</option>
-                                <option value="Dark">Dark</option>
-                                <option value="Steel">Steel</option>
-                                <option value="Fairy">Fairy</option>
-                            </select>
-                            <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
-                        </div>
+                        <label>Tera Type</label>
+                        <select class="tera-type calc-trigger">
+                            <option value="Normal" selected="selected">Normal</option>
+                            <option value="Grass">Grass</option>
+                            <option value="Fire">Fire</option>
+                            <option value="Water">Water</option>
+                            <option value="Electric">Electric</option>
+                            <option value="Ice">Ice</option>
+                            <option value="Flying">Flying</option>
+                            <option value="Bug">Bug</option>
+                            <option value="Poison">Poison</option>
+                            <option value="Ground">Ground</option>
+                            <option value="Rock">Rock</option>
+                            <option value="Fighting">Fighting</option>
+                            <option value="Psychic">Psychic</option>
+                            <option value="Ghost">Ghost</option>
+                            <option value="Dragon">Dragon</option>
+                            <option value="Dark">Dark</option>
+                            <option value="Steel">Steel</option>
+                            <option value="Fairy">Fairy</option>
+                        </select>
+                        <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
+                    </div>
                 </div>
                 <div class="move1">
                     <select class="move-selector calc-trigger small-select"></select>
@@ -447,7 +462,6 @@ title: Battle Facilities Mass Calculator
                     <input class="move-max calc-trigger btn-input" type="checkbox" id="maxL4" /><label class="btn x-btn gen-specific g8" for="maxL4" title="Use the corresponding Max Move?">Max</label>
                     <select class="move-hits calc-trigger hide"></select>
                 </div>
-
             </div>
         </div><!--End Pokemon panel-->
         <div class="panel field-info"><!--Start Field panel-->
